🐛 Fix illustration border-radius overflow bug in modile browser

--- a/css/modules.css
+++ b/css/modules.css
@@ -7,12 +7,9 @@
 
 /* App illustration */
 .weatherIllustration {
-  border-radius: 2rem;
-  background-color: #e5e5e5;
   width: 100%;
   padding-top: 100%;
   margin-top: 2rem;
-  overflow: hidden;
   position: relative;
 }
 
@@ -22,6 +19,8 @@
   top: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  border-radius: 2rem;
 }
 
 .weatherIllustration__image {
@@ -41,7 +40,7 @@
   }
 }
 
-.weatherIllustration::after {
+.weatherIllustration__wrapper::after {
   display: block;
   content: '';
   position: absolute;
